# SpeechExperiment

./: .gitignore  README.md  pyproject.toml
config/: finetune_whisper_parameters.yml  logging.yml
src/: data_preparation.py  eval_whisper.py  run_fine-tuning.py  train_whisper.py
src/utils/: helpers.py  prep_utils.py
vad-implementation/: README.md
whisper-finetuning/: README.md
whisper-finetuning/src/: data_preparation.py  eval_whisper.py  run_fine-tuning.py  train_whisper.py
whisper-finetuning/src/utils/: helpers.py  metric_utils.py  prep_utils.py
whisper-streaming/: README.md
whisper-streaming/src/: transcript_stream.py
whisper-streaming/src/utils/: helper.py  model.py
